localization, jpa audit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
   liquibase:
     change-log: classpath:/db/changelog/changelog-main.yml
 
+  messages:
+    basename: i18n/messages
+
 logging:
   level:
     web: debug
