--- a/src/main/resources/db/changelog/v1/2024-11-12-create-table-task.yml
+++ b/src/main/resources/db/changelog/v1/2024-11-12-create-table-task.yml
@@ -24,7 +24,7 @@ databaseChangeLog:
 
              - column:
                 name: duration
-                type: VARCHAR(255)
+                type: BIGINT
                 constraints:
                   nullable: false
 
